Link to sections in navbar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: default
   <img src="https://unsplash.it/1024/400">
 </div>
 
+<a name="peruskurssi"></a>
 <div>
   <h2>Peruskurssi 2017</h2>
   <p>
@@ -19,6 +20,7 @@ layout: default
   <img src="https://unsplash.it/g/1024/400">
 </div>
 
+<a name="harjoitusajat"></a>
 <div>
   <h2>Harjoitusajat</h2>
   <p>
@@ -33,6 +35,7 @@ layout: default
   <img src="https://unsplash.it/1024/400?blur">
 </div>
 
+<a name="seura"></a>
 <div>
   <h2>Seura / lajit / yhteystiedot</h2>
   <p>
@@ -47,6 +50,7 @@ layout: default
   <img src="https://unsplash.it/1024/400?random">
 </div>
 
+<a name="dojo"></a>
 <div>
   <h2>Dojo / sijainti</h2>
   <p>
