--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
   <img src="https://unsplash.it/1024/400">
 </div>
 
-<a name="peruskurssi"></a>
+<a name="peruskurssi" class="anchor"></a>
 <div>
   <h2>Peruskurssi 2017</h2>
   <p>
@@ -20,7 +20,7 @@ layout: default
   <img src="https://unsplash.it/g/1024/400">
 </div>
 
-<a name="harjoitusajat"></a>
+<a name="harjoitusajat" class="anchor"></a>
 <div>
   <h2>Harjoitusajat</h2>
   <p>
@@ -35,7 +35,7 @@ layout: default
   <img src="https://unsplash.it/1024/400?blur">
 </div>
 
-<a name="seura"></a>
+<a name="seura" class="anchor"></a>
 <div>
   <h2>Seura / lajit / yhteystiedot</h2>
   <p>
@@ -50,7 +50,7 @@ layout: default
   <img src="https://unsplash.it/1024/400?random">
 </div>
 
-<a name="dojo"></a>
+<a name="dojo" class="anchor"></a>
 <div>
   <h2>Dojo / sijainti</h2>
   <p>
