--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="pure-g">
-  <div class="pure-u-1">
+  <div class="image-main pure-u-1">
     <img class="pure-img" src="https://unsplash.it/1024/400">
   </div>
 
@@ -17,7 +17,7 @@ layout: default
     </p>
   </div>
 
-  <div class="pure-u-1">
+  <div class="image-spacer pure-u-1">
     <img class="pure-img" src="https://unsplash.it/g/1024/400">
   </div>
 
@@ -32,7 +32,7 @@ layout: default
     </p>
   </div>
 
-  <div class="pure-u-1">
+  <div class="image-spacer pure-u-1">
     <img class="pure-img" src="https://unsplash.it/1024/400?blur">
   </div>
 
@@ -47,7 +47,7 @@ layout: default
     </p>
   </div>
 
-  <div class="pure-u-1">
+  <div class="image-spacer pure-u-1">
     <img class="pure-img" src="https://unsplash.it/1024/400?random">
   </div>
 
@@ -59,7 +59,7 @@ layout: default
     </p>
   </div>
 
-  <div class="pure-u-1">
+  <div class="image-spacer pure-u-1">
     <img class="pure-img" src="https://unsplash.it/g/1024/400?random">
   </div>
 </div>
