Make anchors play nice with the grid

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <img class="pure-img" src="https://unsplash.it/1024/400">
   </div>
 
-  <a name="peruskurssi" class="anchor"></a>
+  <a name="peruskurssi" class="anchor pure-u-1"></a>
   <div class="pure-u-1">
     <h2>Peruskurssi 2017</h2>
     <p>
@@ -21,7 +21,7 @@ layout: default
     <img class="pure-img" src="https://unsplash.it/g/1024/400">
   </div>
 
-  <a name="harjoitusajat" class="anchor"></a>
+  <a name="harjoitusajat" class="anchor pure-u-1"></a>
   <div class="pure-u-1">
     <h2>Harjoitusajat</h2>
     <p>
@@ -36,7 +36,7 @@ layout: default
     <img class="pure-img" src="https://unsplash.it/1024/400?blur">
   </div>
 
-  <a name="seura" class="anchor"></a>
+  <a name="seura" class="anchor pure-u-1"></a>
   <div class="pure-u-1">
     <h2>Seura / lajit / yhteystiedot</h2>
     <p>
@@ -51,7 +51,7 @@ layout: default
     <img class="pure-img" src="https://unsplash.it/1024/400?random">
   </div>
 
-  <a name="dojo" class="anchor"></a>
+  <a name="dojo" class="anchor pure-u-1"></a>
   <div class="pure-u-1">
     <h2>Dojo / sijainti</h2>
     <p>
