Add a bit of spacing to content sections

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   </div>
 
   <a name="peruskurssi" class="anchor pure-u-1"></a>
-  <div class="pure-u-1">
+  <div class="content-section pure-u-1">
     <h2>Peruskurssi 2017</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dictum iaculis nibh, sit amet vulputate nisl mollis at. Integer quis lorem massa. In hac habitasse platea dictumst. Aliquam a cursus urna. Donec viverra vehicula nisi.
@@ -22,7 +22,7 @@ layout: default
   </div>
 
   <a name="harjoitusajat" class="anchor pure-u-1"></a>
-  <div class="pure-u-1">
+  <div class="content-section pure-u-1">
     <h2>Harjoitusajat</h2>
     <p>
       Duis mi ex, lobortis vitae fermentum non, sagittis ut leo. Vestibulum justo nibh, sollicitudin at tempor vitae, pulvinar et ante. Aliquam in neque nibh. Nunc id odio purus. Nunc sit amet enim faucibus, hendrerit dolor eget, iaculis est. Aenean quis iaculis odio, euismod luctus libero. Cras imperdiet tellus sed ornare laoreet.
@@ -37,7 +37,7 @@ layout: default
   </div>
 
   <a name="seura" class="anchor pure-u-1"></a>
-  <div class="pure-u-1">
+  <div class="content-section pure-u-1">
     <h2>Seura / lajit / yhteystiedot</h2>
     <p>
       Ut vel tortor quis nulla finibus interdum a nec metus. Nulla eu ligula blandit, aliquet neque eget, tristique lorem. Vestibulum varius cursus purus, quis ornare velit hendrerit sed. Nullam nunc arcu, dapibus vitae ipsum vitae, vestibulum tempus augue. Vestibulum tortor metus, congue ac nunc a, ultrices viverra erat. Aliquam erat volutpat. Ut sed dictum diam, vel mollis turpis. Nulla scelerisque dapibus diam, nec finibus velit accumsan vel.
@@ -52,7 +52,7 @@ layout: default
   </div>
 
   <a name="dojo" class="anchor pure-u-1"></a>
-  <div class="pure-u-1">
+  <div class="content-section pure-u-1">
     <h2>Dojo / sijainti</h2>
     <p>
       Duis fermentum augue et ipsum bibendum fringilla. Quisque gravida erat libero. Integer fringilla elit turpis, eget tempor lorem viverra eu. Nulla pulvinar vestibulum diam ac egestas. Proin a condimentum ligula. In eu justo metus. Donec sem felis, fermentum et dui quis, pellentesque volutpat lectus. Integer tempor tristique tempus. Nulla pulvinar vestibulum eros sed feugiat.
