--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="pure-g">
   <div class="image-main pure-u-1">
-    <div class="image-bg" style="background-image: url('https://unsplash.it/1024/400');"></div>
+    <div class="image-bg" style="background-image: url('https://unsplash.it/1600/900');"></div>
   </div>
 
   <a name="peruskurssi" class="anchor pure-u-1"></a>
@@ -18,7 +18,7 @@ layout: default
   </div>
 
   <div class="image-spacer pure-u-1">
-    <div class="image-bg" style="background-image: url('https://unsplash.it/g/1024/400');"></div>
+    <div class="image-bg image-bg-parallax" style="background-image: url('https://unsplash.it/g/1600/1000?blur');"></div>
   </div>
 
   <a name="harjoitusajat" class="anchor pure-u-1"></a>
@@ -33,7 +33,7 @@ layout: default
   </div>
 
   <div class="image-spacer pure-u-1">
-    <div class="image-bg" style="background-image: url('https://unsplash.it/1024/400?blur');"></div>
+    <div class="image-bg" style="background-image: url('https://unsplash.it/1600/900?blur');"></div>
   </div>
 
   <a name="seura" class="anchor pure-u-1"></a>
@@ -48,7 +48,7 @@ layout: default
   </div>
 
   <div class="image-spacer pure-u-1">
-    <div class="image-bg" style="background-image: url('https://unsplash.it/1024/400?random');"></div>
+    <div class="image-bg image-bg-parallax" style="background-image: url('https://unsplash.it/1600/900?random');"></div>
   </div>
 
   <a name="dojo" class="anchor pure-u-1"></a>
@@ -60,6 +60,6 @@ layout: default
   </div>
 
   <div class="image-spacer pure-u-1">
-    <div class="image-bg" style="background-image: url('https://unsplash.it/g/1024/400?random');"></div>
+    <div class="image-bg" style="background-image: url('https://unsplash.it/g/1600/900?random');"></div>
   </div>
 </div>
